[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/01 - Start/Start.gd" type="Script" id=1]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=2]

[node name="Start" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -10.0
margin_right = 40.0
margin_bottom = 10.0

[node name="StartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 19.0
theme = ExtResource( 2 )
text = "Start game"

[node name="Credits" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 23.0
margin_right = 80.0
margin_bottom = 42.0
theme = ExtResource( 2 )
text = "Credits"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
